# Freelancing-agent

./: .env.example  README.md  clean_install.bat  main.py  pyproject.toml  requirements.txt  test_langgraph.py  test_playwright.py
output/: freelance_gigs.xlsx
src/: __init__.py  ai_filter.py  config.py  excel_writer.py  linkedin_scraper.py  state.py  workflow.py
