[project]
name = "freelance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.1",
    "asyncio==3.4.3",
    "beautifulsoup4==4.12.2",
    "celery==5.3.4",
    "chromadb==0.4.22",
    "fastapi==0.104.1",
    "httpx==0.25.1",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-google-genai>=0.0.10",
    "langchain-groq>=0.1.0",
    "langchain-huggingface>=0.0.10",
    "langchain-sambanova>=0.1.0",
    "langgraph>=0.1.0",
    "loguru==0.7.2",
    "playwright==1.40.0",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.1.0",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "requests==2.31.0",
    "sentence-transformers>=2.6.0",
    "tenacity==8.2.3",
    "uvicorn[standard]==0.24.0",
]
