[project]
name = "freelance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.4.0",
    "jsonpatch>=1.32",
    "jsonpointer>=3.0.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.0.10",
    "loguru>=0.7.2",
    "openpyxl>=3.1.2",
    "playwright>=1.40.0",
    "pydantic-core>=2.41.5",
    "python-dotenv>=1.0.0",
]
